--- a/surveyapp/templates/success.html
+++ b/surveyapp/templates/success.html
@@ -10,9 +10,9 @@
 </head>
 <body class="bg-light">
     <div class="container vh-100 d-flex justify-content-center align-items-center">
-        <div class="card shadow-lg p-4" style="max-width: 500px; width: 100%;">
-            <h1 class="text-center mb-4 text-primary">{{ message }}</h1>
-
+        <div class="card shadow-lg p-4" style="max-width: 800px; width: 100%;">
+            <h1 class="text-center mb-4 text-success">Thank you for completing the form!</h1>
+            <p style = "font-size : 20px" class='text-center mb-4'> We appreciate your time and effort</p>
         </div>
     </div>
     <!-- Bootstrap JS Bundle with Popper -->
