add consent and final validation points
continuous numbered added,
modify mm/yyyy date of field

--- a/surveyapp/templates/page1.html
+++ b/surveyapp/templates/page1.html
@@ -176,7 +176,7 @@
                     <label for="id_height_feet" class="form-label">6. How tall are you?</label>
                     <div class="d-flex">
                         <!-- Feet input -->
-                        <div class="me-2">
+                        <div class="me-2" style="margin-left: 20px;">
                             <label for="id_height_feet">Feet</label>
                             {{ form.height_feet }}
                         </div>
