--- a/surveyapp/templates/page2.html
+++ b/surveyapp/templates/page2.html
@@ -1,11 +1,3 @@
-{% comment %} <form method="post">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit">Next</button>
-</form>
-{% endcomment %}
-
-
 <!DOCTYPE html>
 <html lang="en">
 
@@ -121,7 +113,7 @@
                 {% csrf_token %}
 
                 <div class="mb-1">
-                    <label for="id_infections_diagnosed" class="form-label">1. Have you ever been diagnosed with, or exposed to, any serious infections like HIV, hepatitis, tuberculosis, or Cancer?</label>
+                    <label for="id_infections_diagnosed" class="form-label">11. Have you ever been diagnosed with, or exposed to, any serious infections like HIV, hepatitis, tuberculosis, or Cancer?</label>
                     {{ form.infections_diagnosed }}
                     {% if form.infections_diagnosed.errors %}
                     <div class="error">
@@ -134,7 +126,7 @@
 
 
                 <div class="mb-1">
-                    <label for="id_autoimmune_condition" class="form-label">2. Do you have any autoimmune conditions that you are aware of?</label>
+                    <label for="id_autoimmune_condition" class="form-label">12. Do you have any autoimmune conditions that you are aware of?</label>
                     {{ form.autoimmune_condition }}
                     {% if form.autoimmune_condition.errors %}
                     <div class="error">
@@ -147,8 +139,8 @@
 
 
 
-                <div class="mb-2">
-                    <label for="id_reproductive_urinary_conditions" class="form-label mb-2">3. Do you have any known diseases of the reproductive or urinary system? Eg: UTIs, Kidney Stones, Bladder stones, Ovarian Cysts etc.</label>
+                <div class="mb-1">
+                    <label for="id_reproductive_urinary_conditions" class="form-label mb-2">13. Do you have any known diseases of the reproductive or urinary system? Eg: UTIs, Kidney Stones, Bladder stones, Ovarian Cysts etc.</label>
                     <div class="d-flex">
                         <div class="form-check">
                             <!-- Render the "Yes" radio button using Django form field -->
@@ -182,8 +174,8 @@
                 </div>
 
 
-                <div class="mb-2">
-                    <label for="id_cardiovascular_conditions" class="form-label mb-2">4. Do you have any known cardiovascular conditions (related to the heart or blood vessels)?</label>
+                <div class="mb-1">
+                    <label for="id_cardiovascular_conditions" class="form-label mb-2">14. Do you have any known cardiovascular conditions (related to the heart or blood vessels)?</label>
                     <div class="d-flex">
                         <div class="form-check">
                             <!-- Render the "Yes" radio button for cardiovascular_conditions -->
@@ -216,8 +208,8 @@
                     {% endif %}
                 </div>
 
-                <div class="mb-2">
-                    <label for="id_nervous_bone_muscle_conditions" class="form-label mb-2">5.Do you have any known diseases of the nervous system, bones, or muscles?</label>
+                <div class="mb-1">
+                    <label for="id_nervous_bone_muscle_conditions" class="form-label mb-2">15.Do you have any known diseases of the nervous system, bones, or muscles?</label>
                     <div class="d-flex">
                         <div class="form-check">
                             <!-- Render the "Yes" radio button for nervous_bone_muscle_conditions -->
@@ -251,8 +243,8 @@
                 </div>
 
 
-                <div class="mb-2">
-                    <label for="id_sleep_disorder_medications" class="form-label">6. Do you take medication for sleep disorders like insomnia, apnea, or others?</label>
+                <div class="mb-1">
+                    <label for="id_sleep_disorder_medications" class="form-label">16. Do you take medication for sleep disorders like insomnia, apnea, or others?</label>
                     <div class="d-flex">
                         <div class="form-check">
                             <input class="form-check-input" type="radio" name="sleep_disorder_medications"
@@ -284,8 +276,8 @@
                 </div>
 
 
-                <div class="mb-2">
-                    <label for="id_allergies_asthma" class="form-label">7. Do you have any allergies or asthma?</label>
+                <div class="mb-1">
+                    <label for="id_allergies_asthma" class="form-label">17. Do you have any allergies or asthma?</label>
                     <div class="d-flex">
                         <div class="form-check">
                             <input class="form-check-input" type="radio" name="allergies_asthma" id="allergies_yes"
@@ -315,8 +307,8 @@
                 </div>
 
 
-                <div class="mb-2">
-                    <label for="id_skin_conditions" class="form-label">8. Do you suffer from any skin conditions that require you to take medication?</label>
+                <div class="mb-1">
+                    <label for="id_skin_conditions" class="form-label">18. Do you suffer from any skin conditions that require you to take medication?</label>
                     <div class="d-flex">
                         <div class="form-check">
                             <input class="form-check-input" type="radio" name="skin_conditions" id="skin_yes"
@@ -346,8 +338,8 @@
                 </div>
 
 
-                <div class="mb-2">
-                    <label for="id_acne_history" class="form-label">9. Do you experience acne or have a history of acne?</label>
+                <div class="mb-1">
+                    <label for="id_acne_history" class="form-label">19. Do you experience acne or have a history of acne?</label>
                     <div class="d-flex">
                         <div class="form-check">
                             <input class="form-check-input" type="radio" name="acne_history" id="acne_yes" value="True"
@@ -377,8 +369,8 @@
                 </div>
 
 
-                <div class="mb-2">
-                    <label for="id_mental_health_conditions" class="form-label">10. Have you been diagnosed with any psychiatric or mental health conditions?</label>
+                <div class="mb-1">
+                    <label for="id_mental_health_conditions" class="form-label">20. Have you been diagnosed with any psychiatric or mental health conditions?</label>
                     <div class="d-flex">
                         <div class="form-check">
                             <input class="form-check-input" type="radio" name="mental_health_conditions"
@@ -410,8 +402,8 @@
                 </div>
 
 
-                <div class="mb-2">
-                    <label for="id_blood_transfusion" class="form-label">11. Have you ever received a blood transfusion or blood products? Eg: Blood, Platelets, Plasma etc.</label>
+                <div class="mb-1">
+                    <label for="id_blood_transfusion" class="form-label">21. Have you ever received a blood transfusion or blood products? Eg: Blood, Platelets, Plasma etc.</label>
                     <div class="d-flex">
                         <div class="form-check">
                             <input class="form-check-input" type="radio" name="blood_transfusion"
@@ -443,8 +435,8 @@
                 </div>
 
 
-                <div class="mb-2">
-                    <label for="id_high_risk_yellow_fever" class="form-label">12. Have you travelled to a high risk country for yellow fever in the last 6 months? (Countries like: Cameroon, Chad, Congo, Democratic Republic of Congo (DRC), Guinea, Niger, Nigeria, and South Sudan)</label>
+                <div class="mb-1">
+                    <label for="id_high_risk_yellow_fever" class="form-label">22. Have you travelled to a high risk country for yellow fever in the last 6 months? (Countries like: Cameroon, Chad, Congo, Democratic Republic of Congo (DRC), Guinea, Niger, Nigeria, and South Sudan)</label>
                     <div class="d-flex">
                         <div class="form-check">
                             <input class="form-check-input" type="radio" name="high_risk_yellow_fever"
@@ -475,8 +467,8 @@
                 </div>
 
 
-                <div class="mb-2">
-                    <label for="id_hospitalization_surgery" class="form-label">13. Have you been hospitalized or undergone surgery in the last 6 months?</label>
+                <div class="mb-1">
+                    <label for="id_hospitalization_surgery" class="form-label">23. Have you been hospitalized or undergone surgery in the last 6 months?</label>
                     <div class="d-flex">
                         <div class="form-check">
                             <input class="form-check-input" type="radio" name="hospitalization_surgery"
@@ -508,8 +500,8 @@
                 </div>
 
 
-                <div class="mb-2">
-                    <label for="id_contagious_diseases" class="form-label">14. Are you currently suffering from or have recently had any contagious diseases (within the last 2 weeks)? (Eg: flu, colds, or strep throat)</label>
+                <div class="mb-1">
+                    <label for="id_contagious_diseases" class="form-label">24. Are you currently suffering from or have recently had any contagious diseases (within the last 2 weeks)? (Eg: flu, colds, or strep throat)</label>
                     <div class="d-flex">
                         <div class="form-check">
                             <input class="form-check-input" type="radio" name="contagious_diseases" id="contagious_yes"
@@ -539,8 +531,8 @@
                 </div>
 
 
-                <div class="mb-2">
-                    <label for="id_multi_drug_resistant_organisms" class="form-label">15. Have you ever been diagnosed with multi-drug resistant organisms?
+                <div class="mb-1">
+                    <label for="id_multi_drug_resistant_organisms" class="form-label">25. Have you ever been diagnosed with multi-drug resistant organisms?
                         </label>
                     {{ form.multi_drug_resistant_organisms }}
                     {% if form.multi_drug_resistant_organisms.errors %}
@@ -554,13 +546,13 @@
 
                 <!-- --------------------change of other category------------------------- -->
                 <div class="mb-1" id="other_id_multi_drug_resistant_organisms" style="display: none;">
-                    <label for="other_id_multi_drug_resistant_organisms" class="form-label">15.a. Specify Your Answer</label>
+                    <label for="other_id_multi_drug_resistant_organisms" class="form-label">25.a. Specify Your Answer</label>
                     {{ form.other_multi_drug_resistant_organisms }}
                 </div>                
 
                 
                 <div class="mb-1">
-                    <label for="id_heart_blood_pressure_diabetes_medication" class="form-label">16. Are you currently taking any medications for heart issues, blood pressure, or diabetes?</label>
+                    <label for="id_heart_blood_pressure_diabetes_medication" class="form-label">26. Are you currently taking any medications for heart issues, blood pressure, or diabetes?</label>
                     {{ form.heart_blood_pressure_diabetes_medication }}
                     {% if form.heart_blood_pressure_diabetes_medication.errors %}
                     <div class="error">
@@ -572,8 +564,8 @@
                 </div>
 
 
-                <div class="mb-2">
-                    <label for="id_mold_exposure" class="form-label">17. Have you been exposed to mold in your living or working space?</label>
+                <div class="mb-1">
+                    <label for="id_mold_exposure" class="form-label">27. Have you been exposed to mold in your living or working space?</label>
                     <div class="d-flex">
                         <div class="form-check">
                             <input class="form-check-input" type="radio" name="mold_exposure" id="mold_exposure_yes"
@@ -603,8 +595,8 @@
                 </div>
 
 
-                <div class="mb-2">
-                    <label for="id_genetic_conditions" class="form-label">18. Do you or any of your immediate family members have congenital or genetic conditions? Eg. heart defects, neural tube defects, Down’s syndrome, hemophilia, sickle cell anemia, color blindness</label>
+                <div class="mb-1">
+                    <label for="id_genetic_conditions" class="form-label">28. Do you or any of your immediate family members have congenital or genetic conditions? Eg. heart defects, neural tube defects, Down’s syndrome, hemophilia, sickle cell anemia, color blindness</label>
                     <div class="d-flex">
                         <div class="form-check">
                             <input class="form-check-input" type="radio" name="genetic_conditions" id="genetic_yes"
@@ -634,8 +626,8 @@
                 </div>
 
 
-                <div class="mb-2">
-                    <label for="id_antibiotics_taken" class="form-label">19. How many times have you taken antibiotics...?</label>
+                <div class="mb-1">
+                    <label for="id_antibiotics_taken" class="form-label">29.  How many times you have taken antibiotics in last 6 months?</label>
                     {{ form.antibiotics_taken }}
                     {% if form.antibiotics_taken.errors %}
                     <div class="error">
@@ -647,8 +639,8 @@
                 </div>
 
 
-                <div class="mb-2">
-                    <label for="id_most_recent_antibiotic_treatment" class="form-label">20. When was your most recent antibiotic treatment?</label>
+                <div class="mb-1">
+                    <label for="id_most_recent_antibiotic_treatment" class="form-label">30. When was your most recent antibiotic treatment?</label>
                     {{ form.most_recent_antibiotic_treatment }}
                     {% if form.most_recent_antibiotic_treatment.errors %}
                     <div class="error">
@@ -660,8 +652,8 @@
                 </div>
 
 
-                <div class="mb-2">
-                    <label for="id_covid_tested_positive" class="form-label">21. Have you tested positive for COVID-19 in the past month?</label>
+                <div class="mb-1">
+                    <label for="id_covid_tested_positive" class="form-label">31. Have you tested positive for COVID-19 in the past month?</label>
                     <div class="d-flex">
                         <div class="form-check">
                             <input class="form-check-input" type="radio" name="covid_tested_positive"
@@ -701,7 +693,8 @@
 
 
 
-    <!-- Add the Flatpickr CSS and JS -->
+    <!-- Add the Flatpickr CSS and JS -- >
+    <!-- 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
     <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
 
@@ -714,7 +707,7 @@
             });
         });
     </script>
-    
+    -->
 
 
 
